# sales-agent

./: README.md  agent.py  backend.py  frontend.py  main.py  pyproject.toml  requirements.txt  state.py
data/: products.csv
experiments/: abc.ipynb
tools/: tools.py
