[project]
name = "sales-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.121.0",
    "groq>=0.9",
    "httpx>=0.27",
    "ipynb>=0.5.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3",
    "langchain-groq>=0.3.8",
    "langgraph>=0.2",
    "pandas>=2.2",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "requests>=2.32.5",
    "streamlit>=1.36",
    "uvicorn[standard]>=0.38.0",
]
